--- a/src/main/resources/com/sofoste/apspatientdata/patient-form.fxml
+++ b/src/main/resources/com/sofoste/apspatientdata/patient-form.fxml
@@ -1,18 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.SplitMenuButton?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.control.ScrollPane?>
-<ScrollPane xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="com.sofoste.apspatientdata.PatientFormController">
+<ScrollPane prefHeight="852.0" prefWidth="786.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sofoste.apspatientdata.PatientFormController">
     <AnchorPane prefHeight="829.0" prefWidth="784.0">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
@@ -36,10 +29,10 @@
     <Button fx:id="submitButton" layoutX="74.0" layoutY="729.0" onAction="#handleSubmitButtonAction" prefHeight="64.0" prefWidth="149.0" text="SUBMIT" />
     <SplitMenuButton fx:id="selectLanguageMenu" layoutX="580.0" layoutY="33.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="164.0" text="SELECT LANGUAGE">
         <items>
-            <MenuItem fx:id="englishMenu" mnemonicParsing="false" text="ENGLISH" userData="en" onAction="#handleLanguageChangeAction" />
-            <MenuItem fx:id="germanMenu" mnemonicParsing="false" text="GERMAN" userData="de" onAction="#handleLanguageChangeAction" />
-            <MenuItem fx:id="frenchMenu" mnemonicParsing="false" text="FRENCH" userData="fr" onAction="#handleLanguageChangeAction" />
-            <MenuItem fx:id="spanishMenu" mnemonicParsing="false" text="SPANISH" userData="es" onAction="#handleLanguageChangeAction" />
+            <MenuItem fx:id="englishMenu" mnemonicParsing="false" onAction="#handleLanguageChangeAction" text="ENGLISH" userData="en" />
+            <MenuItem fx:id="germanMenu" mnemonicParsing="false" onAction="#handleLanguageChangeAction" text="GERMAN" userData="de" />
+            <MenuItem fx:id="frenchMenu" mnemonicParsing="false" onAction="#handleLanguageChangeAction" text="FRENCH" userData="fr" />
+            <MenuItem fx:id="spanishMenu" mnemonicParsing="false" onAction="#handleLanguageChangeAction" text="SPANISH" userData="es" />
         </items>
     </SplitMenuButton>
 
